fixed spacing

--- a/src/pages/Home/components/Contact/Contact.Module.scss
+++ b/src/pages/Home/components/Contact/Contact.Module.scss
@@ -8,7 +8,6 @@
   width: 100%;
   max-width: $breakpoint-xxl;
   margin: 0 auto;
-  padding: $spacing-lg;
 
 
   .contact {
