--- a/src/pages/Home/components/QASection/QASection.Module.scss
+++ b/src/pages/Home/components/QASection/QASection.Module.scss
@@ -5,7 +5,6 @@
   max-width: $breakpoint-xxl;
   margin: 0 auto;
   border-radius: $border-radius-md;
-  padding: $spacing-lg;
 }
 
 .qa-container {
